Removed z-index to avoid blocking the input cell

--- a/frontend/editor.css
+++ b/frontend/editor.css
@@ -846,10 +846,9 @@ pluto-cell.notebook_exclusive::after {
   top: 0;
   bottom: 0;
   left: 0;
-  right: -4px;
+  right: -4.85px;
   border-radius: 8px;
   border-right: 5px solid #ccc;
-  z-index: 60;
 }
 
 .scroll_y {
